# livereload-server

./: LICENSE  README.md  pyproject.toml
src/livereload_server/: __init__.py  __main__.py  livereload-4.1.1.min.js  livereload-4.1.1.min.js-LICENSE
